<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/modarixon"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/modarixon2"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/background"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/modarixon"
            app:layout_constraintEnd_toStartOf="@+id/modarixon"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/background"
            android:src="@drawable/arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/modarixon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/modarixon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Modarixon"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modarixon" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iconLocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/locate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameHotel" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/address"
            app:layout_constraintStart_toEndOf="@+id/iconLocate"
            app:layout_constraintTop_toBottomOf="@+id/nameHotel" />

        <TextView
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/services"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconLocate" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/wifi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service" />

        <TextView
            android:id="@+id/wifiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/wifi"
            app:layout_constraintStart_toEndOf="@+id/wifi"
            app:layout_constraintTop_toBottomOf="@+id/service" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/restaurantIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/restaurant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wifi" />

        <TextView
            android:id="@+id/restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/restaurant"
            app:layout_constraintStart_toEndOf="@+id/restaurantIcon"
            app:layout_constraintTop_toBottomOf="@+id/wifi" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/barIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantIcon" />

        <TextView
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bar"
            app:layout_constraintStart_toEndOf="@+id/barIcon"
            app:layout_constraintTop_toBottomOf="@+id/restaurantIcon" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/breakfastIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/breakfast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barIcon" />

        <TextView
            android:id="@+id/breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/free_breakfast"
            app:layout_constraintStart_toEndOf="@+id/breakfastIcon"
            app:layout_constraintTop_toBottomOf="@+id/barIcon" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/roomServiceIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/room_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breakfastIcon" />

        <TextView
            android:id="@+id/roomService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/room_service"
            app:layout_constraintStart_toEndOf="@+id/wifi"
            app:layout_constraintTop_toBottomOf="@+id/breakfastIcon" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomServiceIcon" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/phone"
            app:layout_constraintStart_toEndOf="@+id/phoneIcon"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hotel_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneIcon" />

        <TextView
            android:id="@+id/shortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/shortDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>